--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Neighbors</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
   </style>
 
+
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">  
+</script>
 </head>
 
 <body>
