--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
 
   <meta charset="utf-8" />
+  <meta http-equiv="Cross-Origin-Opener-Policy" content="allow-popups" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -36,7 +37,7 @@
 
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">
   </script>
-  
+
 </head>
 
 <body>
