--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8" />
-  <meta http-equiv="Cross-Origin-Opener-Policy" content="allow-popups" />
+  <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
