--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
 
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">
   </script>
+  <script src="/sw.js"></script>
+
 
 </head>
 
